[tool.poetry]
name = "links"
version = "0.1.0"
description = ""
authors = ["Paweł Romanowski <pawroman@pawroman.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.08b1"
flake8 = "^3.8"
isort = "^5.4"
lxml = "^4.6"
mistune = "^0.8.4"
mypy = "^0.790"
pytest = "^6.1"
pytest-asyncio = "^0.14"
xdoctest = "^0.15"
httpx = "^0.16"
brotlipy = "^0.7"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--xdoctest -p pytest_asyncio"
markers = [
    "external: marks tests as connecting to external services (deselect with '-m \"not external\"')"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
