[project]
name = "links"
version = "0.2.0"
description = "Personal links"
authors = ["Paweł Romanowski <pawroman@pawroman.dev>"]

requires-python = ">= 3.13"

dependencies = [
    "lxml",
    "mistune==0.8.4",
    "mypy",
    "pytest",
    "ruff>=0.13.1",
    "types-lxml>=2025.8.25",
    "xdoctest",
]

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "mistune"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--xdoctest"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
